Resize no longer breaks content ratio.
Introduces a projections matrix that adjusts when the window is resized
to ensure that the drawn curve is not distorted by the resizing of the
framebuffer. Since we are only drawing 2D curves right now a
orthographic projection was used.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 glad-gl = { path = "../libs/glad-gl" }
+nalgebra-glm = "0.18.0"
 
 [dependencies.glfw]
 version = "*"
